--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="juego.js"> </script>
 </head>
 <body onload="inicializa();">
-
+<h1>primer app</h1>
 <canvas id="canvas" width="700" height="300" style="border:2px solid #000";> </canvas>
 
 
